# my-moments

./: .gitignore  README.md  docker-compose.dev.yml  my-moments.code-workspace
auth-service/: main.py  pyproject.toml  requirements.txt
compose/app/: Dockerfile  start.sh
compose/base/: Dockerfile
